k8s-config/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: my-mariadb-deployment
spec:
  # A single mariadb instance
  replicas: 1
  selector:
    matchLabels:
      app: my-mariadb
  template:
    metadata:
      labels:
        app: my-mariadb
    spec:
      # Use the init container to download data to the location where the mariadb container expects it
      containers:
        - name: my-mariadb
          image: mariadb
          # Set required environment variables to initialize the container
          volumeMounts:
            - name: data-volume
              mountPath: /docker-entrypoint-initdb.d/
            - name: mariadb-pv
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
            
          startupProbe: # 60*10s -> 10 min
            tcpSocket:
              port: 3306
            failureThreshold: 60
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 3306
            periodSeconds: 10
      # Define an empty volume to be shared by the init and mariadb container
      volumes:
        - name: data-volume
          emptyDir: {}
        - name: mariadb-pv
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
