k8s-config/write-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: writeservice
  template:
    metadata:
      labels:
        app: writeservice
    spec:
      containers:
        - name: writeservice
          image: write-service
          imagePullPolicy: Never # Uses Minikubes Docker image repo (minikube only)
          ports:
            - containerPort: 1234
