k8s-config/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: app-mariadb
  ports:
    - name: mariadb-prot
      protocol: TCP
      port: 3306
      targetPort: 3306
