k8s-config/microservice-service.yaml
# Service
kind: Service
apiVersion: v1
metadata:
  name: my-super-app-service
spec:
  selector:
    app: myexpressapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
