k8s-config/voucher-hub-service.yaml
# Service
kind: Service
apiVersion: v1
metadata:
  name: voucher-hub-service
spec:
  selector:
    app: voucher-hub
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
