k8s-config/write-service-service.yaml
# Service
kind: Service
apiVersion: v1
metadata:
  name: write-service-service
spec:
  selector:
    app: writeservice
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
